<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/detailed_quote_bg_gradient"
    tools:context="mynyresolutionslist.nexmii.com.mynyresolutionslist.ui.activities.StoreActivity">


    <TextView
        android:id="@+id/store_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pureWhite"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="@string/store_vip"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/store_diamond"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/store_title"
        android:layout_marginTop="20dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/vipdiamond"/>

    <TextView
        android:id="@+id/store_offerings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pureWhite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="35sp"
        android:layout_below="@+id/store_diamond"
        android:textStyle="bold"
        android:text="@string/store_you_get"/>

    <ImageView
        android:id="@+id/store_offerings_items"
        android:src="@drawable/vipofferings"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/store_offerings_title"
        android:layout_above="@+id/store_purchase_vip_button"
        android:layout_centerHorizontal="true"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:contentDescription="@string/vip_items" />

    <Button
        android:id="@+id/store_purchase_vip_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="purchaseVip"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/btn_bg_yellow"
        android:textColor="@color/nexmii_font_blue"
        android:text="@string/store_you_price"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
